cal meeting link added to footer button

--- a/index.html
+++ b/index.html
@@ -253,9 +253,11 @@
             <a href="mailto:codemavensolution@gmail.com"
               >codemavensolution@gmail.com</a
             >
-            <button class="button button-white">
-              Book a free strategy call
-            </button>
+            <a href="https://cal.com/codemavensolution/30min" target="_blank">
+              <button class="button button-white">
+                Book a free strategy call
+              </button>
+            </a>
           </div>
           <hr />
 
